--- a/src/Publishes/public/assets/dashboard/css/style.scss
+++ b/src/Publishes/public/assets/dashboard/css/style.scss
@@ -40,7 +40,7 @@
 // @import "scss/bootstrap/print";
 
 // mdb
-@import "scss/mdb/mdb";
+// @import "scss/mdb/mdb";
 
 // Custom CSS
 @import "scss/custom/mixins";
@@ -49,4 +49,5 @@
 @import "scss/custom/card";
 @import "scss/custom/table";
 @import "scss/custom/custom";
+@import "scss/custom/button";
 
