--- a/src/Publishes/public/assets/dashboard/css/style.scss
+++ b/src/Publishes/public/assets/dashboard/css/style.scss
@@ -43,7 +43,7 @@
 // @import "scss/mdb/mdb";
 
 // Custom CSS
-@import "scss/custom/mixins";
+// @import "scss/custom/mixins";
 @import "scss/custom/sidebar-and-main-panel-variables";
 @import "scss/custom/sidebar-and-main-panel";
 @import "scss/custom/card";
