--- a/src/Publishes/public/assets/dashboard/css/scss/custom/_table.scss
+++ b/src/Publishes/public/assets/dashboard/css/scss/custom/_table.scss
@@ -45,6 +45,14 @@ tr.text-muted {
   tr {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 20px 0px;
     background-color: #fff;
+    td:first-child {
+      border-top-left-radius: .5rem;
+      border-bottom-left-radius: .5rem;
+    }
+    td:last-child {
+      border-top-right-radius: .5rem;
+      border-bottom-right-radius: .5rem;
+    }
   }
   td {
     border-top: none;
