--- a/src/Publishes/public/assets/dashboard/css/scss/custom/_custom.scss
+++ b/src/Publishes/public/assets/dashboard/css/scss/custom/_custom.scss
@@ -1,28 +1,18 @@
-body {
-  background-color: #f8f8f8;
-  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft JhengHei", Arial, sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
+// body {
+//   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft JhengHei", Arial, sans-serif;
+// 	-webkit-font-smoothing: antialiased;
+// 	-moz-osx-font-smoothing: grayscale;
+// }
 
-.backend-search-area .col-sm-2 {
-  padding-bottom: 20px;
-}
-
-.pagination {
-  white-space: nowrap;
-  overflow-y: hidden;
-  width: 100%;
-  padding: 0 15px;
-
-  li {
-    display: inline-block;
+.top-bar {
+  font-size: .96rem;
+  a {
+    font-size: .96rem;
+    text-decoration: none;
   }
-}
-
-@media (max-width: 991px) {
-  .responsive-image {
-    max-width: 80px;
+  .breadcrumb {
+    border: none;
+    background-color: transparent;
   }
 }
 
@@ -34,25 +24,10 @@ body {
 }
 
 // icon 與文字的距離
-i[class*="fa"] {
+.btn i[class*="fa"] {
   min-width: 24px;
   text-align: center;
 }
-
-.breadcrumb {
-  padding: .45rem .5rem .45rem .5rem;
-  background-color: transparent;
-  .breadcrumb-item {
-    a {
-      color: black;
-      font-size: .9rem;
-    }
-  }
-}
-
-// .btn {
-//   padding: .84rem .8rem;
-// }
 
 // 邊欄三角型記號
 .has-sub-caret::after {
@@ -64,4 +39,38 @@ i[class*="fa"] {
   border-right: .3em solid transparent;
   border-bottom: 0;
   border-left: .3em solid transparent;
+}
+
+.overflow-x {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+// 拖曳排序
+.move {
+  cursor: move;
+}
+
+.search-form {
+  .col-auto {
+    margin-bottom: 2rem;
+  }
+}
+
+input[type=color].form-control {
+  height: 60px;
+}
+
+.card-update {
+  .form-group {
+    padding-bottom: 1rem;
+    margin-bottom: 1.6rem;
+    label {
+      margin-bottom: 0.4rem;
+      font-size: 0.9rem;
+    }
+    .form-control {
+      border-radius: 10px;
+    }
+  }
 }
